# coding-notes

./: build.sh  check-git-clang-format-output.sh  pre-commit  test.cpp
.github/workflows/: c-cpp.yml
GolangStudy/im/: README.md  client.go  server.go  user.go
cpp_web_demo/: CMakeLists.txt  CMakeLists_2.txt  README.md
cpp_web_demo/httpclient/: CMakeLists.txt  CMakeLists_1.txt  http_client.cpp  http_client.h
cpp_web_demo/httpserver/: CMakeLists.txt  CMakeLists_1.txt  http_server.h
grpc_modules/: go.mod  go.sum
grpc_modules/bidirectional_streaming/client/: main.go
grpc_modules/bidirectional_streaming/proto/: user.pb.go  user.proto
grpc_modules/bidirectional_streaming/server/: main.go
grpc_modules/client_side_streaming/client/: main.go
grpc_modules/client_side_streaming/proto/: user.pb.go  user.proto
grpc_modules/client_side_streaming/server/: main.go
grpc_modules/server_side_streaming/client/: main.go
grpc_modules/server_side_streaming/proto/: user.pb.go  user.proto
grpc_modules/server_side_streaming/server/: main.go
grpc_modules/simple/client/: main.go
grpc_modules/simple/proto/: user.pb.go  (+1 more)
hello_world/: hello_world.cpp
msgpack_test/: test.cpp
regex_test/: test_reg.cpp  test_url.cpp
rust/my_redis/: Cargo.toml
rust/recipes/: Cargo.toml
smart_ptr/: AbstractFactory.cpp  Builder.cpp  Command.cpp  Composite.cpp  Mediator.cpp  Observer.cpp  Prorotype.cpp  Singleton.cpp  memplumber.h  smart_ptr_test.cpp  smart_ptr_test2.cpp  test.cpp
websocket/: main.cpp  server.go  websocket_server.h  ws_test.html
websocket/C++/: websocket_server.h
(+52 files in other folders)
